test/conformance/accept/image_with_required_path.hdoc
hdoc(version="2.0", lang="en");

img(path="media/picture.png", alt="Example figure") { Figure caption }
