test/conformance/reject/image_missing_path.hdoc
hdoc(version="2.0", lang="en");

img { Figure caption }
